package overmind;

message ControlMsgBody {
    optional uint32 controlType = 1;
    optional bytes sign = 2;
    optional bytes condition = 3;
    optional bytes data = 4;
    optional bytes product = 5; 
	repeated string multiSigns = 6;
	optional string source = 7;
}
